feat: add contact section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,5 +10,8 @@
   "hero": {
     "greeting": "Hello, I'm Matthieu",
     "subtitle": "Backend Developer"
+  },
+  "contact": {
+    "title": "Contact Me"
   }
 }
