feat(experiences): add mission details pages with structure and styling

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -16,10 +16,20 @@
   },
   "about": {
     "title": "À Propos De Moi",
-    "content": "Développeur passionné avec 3 ans d'expérience en alternance, j’évolue principalement sur des technologies comme Java, C# et React. Sensible aux bonnes pratiques de développement (Clean Code, architecture hexagonale), je m’intéresse particulièrement aux problématiques d’architecture logicielle et d’industrialisation (Docker, Kubernetes). J'apprécie les environnements collaboratifs où l'on partage les connaissances, et je m’implique activement dans la montée en qualité des projets. Autonome, rigoureux et toujours en veille, je cherche à progresser continuellement et à contribuer à des projets techniquement stimulants."
+    "content": "Développeur passionné avec 3 ans d'expérience en alternance, j’évolue principalement sur des technologies comme Java, C# et React. Sensible aux bonnes pratiques de développement (Clean Code, architecture hexagonale), je m’intéresse particulièrement aux problématiques d’architecture logicielle et d’industrialisation (Docker, Kubernetes). J'apprécie les environnements collaboratifs où l'on partage les connaissances, et je m’implique activement dans la montée en qualité des projets. Autonome, rigoureux et toujours en veille, je cherche à progresser continuellement et à contribuer à des projets techniquement stimulants.",
+
   },
   "formation": {
     "showMore": "Plus de détails",
     "showLess": "Moins de détails"
+  },
+  "experienceDetail": {
+    "notfound": "Expérience non trouvée.",
+    "date": "Date :",
+    "website": "Site internet de l'entreprise",
+    "objective": "\uD83C\uDFAF Objectif :",
+    "context": "Contexte :",
+    "actions": "Actions réalisées :",
+    "result": "Résultat :"
   }
 }
